re PR target/11052 ([arm] noce_process_if_block() can loose REG_INC notes)

PR target/11052
* ifcvt.c (noce_process_if_block): Fail if the destination has
side-effects.

gcc.c-torture/execute/20030606-1.c: New.

From-SVN: r67558